line wrap width fix

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -487,6 +487,25 @@ h3, h4 {
 		    	width:0px;
 		    }
 		}	
+		.line__wrap1 {
+		  top: 2%;
+		  left: -48px;
+		}
+
+		.line__wrap2 {
+		  top: 28%;
+		  left: -5px;
+		}
+
+		.line__wrap3 {
+		  top: 55%;
+		  left: -5px;
+		}
+
+		.line__wrap4 {
+		  top: 80%;
+		  left: -39px;
+		}
 
 
 
